--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.1.2",
+    "bluebird": "^3.4.6",
     "crypto": "0.0.3",
     "moment": "^2.15.2",
     "request": "^2.76.0"
