--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^3.4.6",
     "crypto": "0.0.3",
     "moment": "^2.15.2",
+    "redis": "^2.6.2",
     "request": "^2.76.0"
   }
 }
